# amyg-sims

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  PLAN.md  PLAN_FIX.md  PLAN_PUBLICATION.md  PUBLICATION_GUIDE.md  README.md  RESULTS.md  analyze_10b_results.py  analyze_mmc_results.py  analyze_results.py  check_amyg_pl.py  debug_face_pair.py  debug_kernel.md  reproduce.sh  run_analysis.sh  validate_td_gated.py
.claude/: .claudeignore  CLAUDE.md  settings.local.json
data_mmc_ellipsoidal/: mesh_meta.json  results_730nm.json  results_850nm.json
data_mmc_remote/: mesh_meta.json  results_730nm.json  results_850nm.json
data_mmc_temporal/: mesh_meta.json  results_730nm.json  results_850nm.json
include/: detector.cuh  geometry.cuh  mmc_geometry.h  mmc_kernel.cuh  mmc_types.cuh  optical_properties.cuh  types.cuh
include/voxel/: geometry.cuh  mc_kernel.cuh  types.cuh
mmc/: CMakeLists.txt  README.md  build.bat  build.sh  mmc_config.txt
mmc/include/: detector_array.h  mesh_loader.h  mmc_kernel.cuh  mmc_kernel.h  mmc_mesh.cuh  optical_props.h  simulation_config.h  types.h
mmc/python/: analyze_mmc.py  visualize_mmc.py
mmc/src/: detector_array.cpp  main.cpp  mesh_loader.cpp  mmc_kernel.cu  mmc_main.cu  mmc_mesh.cu  optical_props.cpp  simulation_config.cpp
paper/: main.tex  refs.bib
python/: analyze.py  create_3d_viewer.py  diagnose_mesh.py  dot_reconstruction.py  generate_contamination_figure.py  generate_mni152_mesh.py  optimize_wavelengths.py  requirements.txt  sensitivity_analysis.py  validate_diffusion.py  view_mmc_mesh.py  view_mmc_surface.py  visualize.py  visualize_3d.py
scripts/: deploy.sh  run_docker.sh  run_on_vast.sh  vast_setup.sh
src/: detector.cu  export_3d_model.cu  geometry.cu  main.cu  mc_kernel.cu  mmc_geometry.cu  mmc_kernel.cu  mmc_main.cu  optical_properties.cu
src/voxel/: detector.cu
